policies/tests/require-network-policies/resource-fail.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-without-netpol
  labels:
    app.kubernetes.io/part-of: sre-platform
