policies/tests/require-network-policies/resource-pass.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-with-netpol
  labels:
    sre.io/network-policy-configured: "true"
    app.kubernetes.io/part-of: sre-platform
